refactor for mongodb
